# perfcba

./: .gitignore  Algorithm.py  Bandit.py  Experiment.py  Graph.py  Profiler.py  README.md  SCM.py  backdoor_bandits.py  budgeted_raps.py  causal_bandits.py  classical_bandits.py  linear_bandits.py  metrics.py  pyproject.toml
estimators/: models.py  robust.py
examples/: test_smoke.py
experiments/: analysis.py  analyze_gap_regret.py  artifacts.py  baselines.py  causal_envs.py  causal_setup.py  common.py  compare_schedulers.py  correlate_gap_proxies.py  exp1_unstructured.py  exp2_linear.py  exp3_causal.py  exp4_ablation.py  exp5_sweeps.py  exploit.py  grids.py  heatmap.py  metrics.py  parallel_run_tau_regret_curve.py  parallel_run_tau_study.py  parallel_utils.py  plot_optimal_tau_surface.py  regret_curves.py  run_binary_discovery.py  run_tau_regret_curve.py  run_tau_study.py  sampler_cache.py  scheduler.py  structure.py  timeline.py  validate_gaps.py
experiments_old/: __init__.py  common.py  exp2_linear.py  exp5_sweeps.py
scripts/: compare_raps_calls.py  compare_tau_results.py  plot_graph_density_seed_lines.py  plot_m2_tau_line.py  plot_tau_margin_lines.py
